[gd_scene load_steps=8 format=3 uid="uid://btujomquwsc16"]

[ext_resource type="Script" uid="uid://ck2ab1opndrjy" path="res://enemies/enemy_generator/enemy_generator.gd" id="1_k80ol"]
[ext_resource type="Script" uid="uid://b2icqvnrurryk" path="res://components/spawner_component.gd" id="1_p85au"]
[ext_resource type="PackedScene" uid="uid://cp5fqmyvtjgs7" path="res://enemies/kalamaris/kalamaris_enemy.tscn" id="2_d5nw7"]
[ext_resource type="PackedScene" uid="uid://slvxbtlyp7xx" path="res://enemies/kavouris/kavouris_enemy.tscn" id="3_m4hnj"]
[ext_resource type="PackedScene" uid="uid://bnq12bj7wcoop" path="res://enemies/keravnos/keravnos_enemy.tscn" id="4_fag5v"]
[ext_resource type="PackedScene" uid="uid://d7itean53d0y" path="res://enemies/prasinos_magkas/prasinos_magkas_enemy.tscn" id="5_rpav0"]
[ext_resource type="Resource" uid="uid://vrfwv2ai2n3w" path="res://game_stats/game_stats.tres" id="6_k1062"]

[node name="EnemyGenerator" type="Node2D"]
script = ExtResource("1_k80ol")
KalamarisEnemyScene = ExtResource("2_d5nw7")
KavourisEnemyScene = ExtResource("3_m4hnj")
KeravnosEnemyScene = ExtResource("4_fag5v")
PrasinosMagkasEnemyScene = ExtResource("5_rpav0")
game_stats = ExtResource("6_k1062")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("1_p85au")
metadata/_custom_type_script = "uid://b2icqvnrurryk"

[node name="KalamarisEnemySpawnerTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="KeravnosEnemySpawnerTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="KavourisEnemySpawnerTimer" type="Timer" parent="."]
process_mode = 4
wait_time = 15.0
one_shot = true
autostart = true

[node name="PrasinosMagkasSpawnerTimer" type="Timer" parent="."]
process_mode = 4
wait_time = 30.0
one_shot = true
autostart = true
